# yulincorp-sync-system

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.vue  constants.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  license.rs  main.rs  validators.rs
src-tauri/src/commands/: auth.rs  brands.rs  categories.rs  contracts.rs  customers.rs  dashboard.rs  finance.rs  inventory.rs  mod.rs  products.rs  projects.rs  purchase.rs  sales.rs  suppliers.rs
src/api/: index.ts
src/components/: Layout.vue
src/router/: index.ts
src/stores/: index.ts
src/styles/: global.css
src/views/: Brands.vue  Categories.vue  Contracts.vue  Customers.vue  Dashboard.vue  Finance.vue  Inventory.vue  Login.vue  NotFound.vue  Products.vue  Projects.vue  Purchase.vue  Sales.vue  Settings.vue  Suppliers.vue
